# MiniTrainStore

./: README.md
code/: .gitignore  log.py  product.py  publish.py  pyproject.toml  scrape.py  settings.py
code/extension/: App copy.vue  README.md  components.json  eslint.config.ts  package-lock.json  package.json  tailwind.config.js  wxt.config.ts
code/extension/components/: CategoriesEditor.vue  ExtensionHeader.vue  OdooManualTab.vue  ProductButton.vue  ProductItem.vue  ProductsTab.vue  ProfileButton.vue  SettingsTab.vue  TagsEditor.vue
code/extension/components/ui/accordion/: AccordionContent.vue  AccordionItem.vue  AccordionTrigger.vue
code/extension/components/ui/badge/: Badge.vue
code/extension/components/ui/button-group/: ButtonGroup.vue  ButtonGroupSeparator.vue  ButtonGroupText.vue
code/extension/entrypoints/: background.ts  content.ts
code/extension/entrypoints/content/: product-button.ts  profile-button.ts
code/extension/entrypoints/main/: App.vue  index.html  style.css
code/extension/entrypoints/popup/: App.vue  style.css
code/extension/entrypoints/sidepanel/: index.html  main.ts
code/extension/services/: odoo.ts
code/extension/stores/: settings.ts
code/extension/types/: product.ts
code/extension/utilities/: browser.ts  category.ts  export.ts  filtering.ts  format.ts  odoo.ts  product.ts  settings.ts  shadow-ui.ts  tag.ts  weight.ts  wxt-store.ts
code/extension/utilities/product/: location.ts  navigation.ts  parsing.ts
code/extension/utilities/profile/: location.ts  navigation.ts  parsing.ts  selectors.ts
(+51 files in other folders)
