[project]
name = "leboncoin-to-odoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "dateparser>=1.2.2",
    "dotenv>=0.9.9",
    "pillow>=11.0.0",
    "requests>=2.32.5",
    "zendriver>=0.15.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "pyrefly>=0.41.3",
    "ruff>=0.14.5",
]

[tool]
